style.css
/* Custom Properties */

:root {
    --main-background-color: rgb(126, 235, 184);
    --navbar-background-color: rgb(248, 153, 142);
    --navbar-currentpage-color: rgba(156, 255, 126, 0.377); 
    --article-background-color: #DDF6CC;
    
}

* {
    margin: 0;
    padding: 0;
}




/* CONTENT WRAPPER */
.content-wrapper {
    background-color: var(--main-background-color);

    position: static;

    width: 100vw;
    height: 100%;

    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 35px;
}





/* --- NAVIGATION BAR STYLE  --- */
.nav-bar {
    width: 100vw;
    height: auto;

    position: fixed;
    z-index: 100;
    top: 0px;

    background-color: var(--navbar-background-color);
}

.nav-bar-list {
    list-style: none;

    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;

}

.nav-bar-list li.current-page {
    background-color: var(--navbar-currentpage-color); 
}

.nav-bar-list a {
    display: inline-block;
    padding: 25px;

    text-decoration: none;
    color: white;
}


.nav-bar-list a:hover {
    animation: shake 0.5s;
}

@keyframes shake{
    0%{
      transform: translateX(0)
    }
    25%{
      transform: translateX(10px);
    }
      
    50%{
      transform: translateX(-10px);
    }
    100%{
      transform: translateX(0px);
    }
  }





/* --- ARTICLE STYLE --- */
.about-me {
    background-color: var(--article-background-color);

    /*border: 1px solid red;*/
    position: relative;
    top: 0px;

    display: block;
    
    width: 85vw;
    height: 100%;

    padding-top: 140px;
    margin-right: auto;
    margin-left: auto;

    box-shadow: 0 2px 4px rgba(255, 0, 0, 0.1), 
    0 8px 16px rgb(0 0 0/10%) ;
}

.img-about {
    border: 10px solid rgba(255, 124, 124, 0.158);

    display: block;
    position: relative;

    width: 500px;
    height: 500px;

    border-radius: 100%;
    
    margin-bottom: 50px;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
}

.s1 {
    display: block;
    padding: 20px 10%;
    overflow: auto;
}

.s1 h2 {
    margin-bottom: 20px;
    overflow: inherit;
}

.s1 p {
    line-height: 50px;
    margin: 20px 0px;
    text-indent: 60px;
    overflow: inherit;
}

